# notebook-lm

./: .gitignore  README.md  test_upload.py
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/src/: App.css  App.tsx  DocumentPreview.css  DocumentPreview.tsx  api.ts  global.d.ts  index.css  types.ts
backend/: README.md  pyproject.toml
backend/notebooklm_backend/: __init__.py  app.py  config.py
backend/notebooklm_backend/models/: __init__.py  chat.py  export.py  metrics.py  notebook.py  rag.py
backend/notebooklm_backend/routes/: __init__.py  agent.py  chat.py  documents.py  export.py  health.py  metrics.py  notebooks.py  rag.py  speech.py
backend/notebooklm_backend/services/: __init__.py  agent.py  chat.py  chunking.py  chunking_lc.py  document_loader.py  document_summary.py  embeddings.py  ingestion.py  llm.py  metrics_store.py  model_profiles.py  notebook_store.py  rag.py  rag_llamaindex.py  speech.py  system.py  vector_store.py
backend/tests/: __init__.py  test_chat.py  test_document_summary.py  test_health.py  test_ingestion.py  test_metrics_store.py  test_model_profiles.py  test_notebook_store.py
docs/: architecture.md  baseline_metrics.json  baseline_metrics_report.txt  baseline_v1.md  project_overview.md  quickstart.md
samples/getting-started/: research-notes.md
scripts/: dev.sh  measure_baseline.py  measure_baseline_auto.py  notebooklm_cli.py
