[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebooklm-backend"
version = "0.1.0"
description = "Offline-first Notebook LM inspired backend with ingestion, embeddings, and RAG APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Offline Notebook LM Team" }
]
dependencies = [
  "fastapi>=0.115.6,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic>=2.9,<2.10",
  "pydantic-settings>=2.5,<3.0",
  "chromadb>=0.5.11,<0.6",
  "sentence-transformers>=3.3,<4.0",
  "python-multipart>=0.0.12,<0.0.13",
  "pdfminer.six>=20231228",
  "python-docx>=1.1.0,<2.0",
  "numpy>=1.26,<3.0",
  "orjson>=3.10,<4.0",
  "httpx>=0.27,<0.28"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.1,<0.10",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "mypy>=1.13,<2.0",
  "types-orjson>=3.6.2,<4.0",
  "coverage>=7.6,<8.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["notebooklm_backend"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Keep CI fast and frictionless in v1: only catch obvious errors (E,F).
select = ["E", "F"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

